CSS/style.css
/*--------------Navbar*/

h1, h2, h3, h4 {
  font-family: 'Playfair Display', sans-serif;
  text-align: center;
  
}

navbarNav {
  position: right;
}



body {
  background-color: #FFEDF4;
}

img {
  width: 100%;  
  margin: auto;
  display: inline;
  
}



/*--------------Packages------------*/  

label {
  font-family: 'Playfair Display', sans-serif;
  color:#08030c; 
  padding-left: 1em;
  padding-right: 1em;
  font-size: 2em; 
  text-align: center;

}

.right-package {
   text-align: center;
   padding-right: 5em;
}

.package {
max-height: 330px;
max-width: 420px; 
padding: 10px;
border-radius: 12%;


}

#package-one {
  display: inline-block;
  padding-right: 22em;
  
}

#package-two {
  display: inline-block;
  text-align: center;
  padding-right: 16em;
}

#package-three {
  display: inline-block;
  padding-right: 2em;
  padding-left: 4em;
  
}



#packages {
border: none;
font-family: "Roboto", sans-serif;
}


#wedpackage-one{
  display: inline-block;
  padding-left: 8em;
  padding-right: 8em;
}

#wedpackage-two {
  display: inline-block;
  padding-left: 8em;
  padding-right: 8em;
 text-align: center;
}

#wedpackage-three {
  display: inline-block;
  padding-right: 8em;
  padding-left: 8em;

}

#wedpackage-four{
  display: inline-block;
  padding-right: 8em;
  padding-left: 8em;
}

#wedpackage-five {
  display: inline-block;
 padding-bottom: 0;
 padding-left: 8em;
 padding-right: 8em;
 text-align: center;
}

#wedpackage-six {
 display: inline-block;
 padding-right: 8em;
 padding-left: 8em;

}

#wedding_form {
  text-align: center;
}

#birthday_form {
 text-align: center;
}


fieldset {
  border: outset 2px #CFAEFF;  
  width: 300px;
  display: inline;
  padding: 0;

}

fieldset p {
  font-family: 'Roboto', sans-serif;
  font-weight: 550;
  
}

input[type=submit] {
   color:#7839A6; 
   font-style: italic; 
}

input[type=submit]:hover {
  color:rgb(255, 92, 255);
}

/*--------------Contact Page------------*/  

#map {
  text-align: center;
}

#contact {
 
  text-align: center;
  padding-top: 1em;
}

#contact i {
  color: #7839A6;
}

/*--------------Media Queries------------*/  



@media screen and (min-width: 1200px) {
  
  .navbar-expand

  #company-history-section {
  padding-top: 150px;
  padding-left: 100px;
  padding-right: 100px;
  padding-bottom: 100px;
  
  }

  img {
      max-width: 100%;
      padding-top: 150px;
      
  }



  #package-one-m {
    display:none;
      
   }
   
   #package-two-m {
     display:none;
      
   
   }
   
   #package-three-m {
     display:none;
      
   }

   #wedpackage-one-m {
    display:none;
    }
  
  #wedpackage-two-m {
    display:none;
    }
  
  #wedpackage-three-m {
    display:none;
    }
  
  #wedpackage-four-m {
    display:none;
    }
  #wedpackage-five-m {
    display:none;
    }
  
  #wedpackage-six-m {
  display:none;
  }

  .index-page-image-m {
    display: none;
  }

 
}
@media screen and (max-width: 390px) {
  
#company-history-section {
font-size: smaller;
padding-top: 20px;
padding-left: 30px;
padding-right: 30px;
padding-bottom: 10px;}


#slideshow {
  display: none; 
}

.package {
  padding: 01.em;
}
 
#border {
   margin: auto;
   width: 100%;
}

.nav-item {
  text-align: end;
  
}



#package-one {
 display:none;
   
}

#package-two {
  display:none;
   

}

#package-three {
  display:none;
   

}

#package-one-m {
   font-size: 0.5em;
   float:left;
  
}

#package-two-m {
  font-size: 0.5em;
  float: left;
  padding-left: 8em;
}

#package-three-m {
  font-size: 0.5em;
  float: right;
  padding-right: 2em;
}

#wedpackage-one {
  display: none;
}

#wedpackage-two {
  display: none;
}

#wedpackage-three {
  display: none;
}

#wedpackage-four {
  display: none;
}

#wedpackage-five {
  display: none;
}

#wedpackage-six {
  display: none;
}

#wedpackage-one-m {
  font-size: 0.5em;
  float:left;
 
}

#wedpackage-two-m {
 font-size: 0.5em;
 float: left;
 padding-left: 8em;
}

#wedpackage-three-m {
 font-size: 0.5em;
 float: right;
 padding-right: 2em;
}

#wedpackage-four-m {
  font-size: 0.5em;
  float:left;
 
}

#wedpackage-five-m {
 font-size: 0.5em;
 float: left;
 padding-left: 8em;
}

#wedpackage-six-m {
 font-size: 0.5em;
 float: right;
 padding-right: 2em;
}

iframe {
  max-width: 85%;
}

#company-history {
   max-width: 75%;
}

.index-page-image-m {
  max-width: 100%;
  padding-top: 6em;
  padding-left: 3em;
  padding-right: 3em;
 
}



}



/*---------------------------BDAYPACKAGES------------------*/

.package {
  overflow: hidden;
}

#package-one label{
   font-size: 2em;
    
}

#package-two label{
  font-size: 2em;

}

#package-three label{
  font-size: 2em;
  
}      


/*--------------text and headers------------*/  




#company-history {

font-family: 'Merriweather', sans-serif;
  text-align: center;
  border: 2px outset;
  width: 500px;
  padding: 10px;
  border: solid 2px #90FFD2;
  vertical-align: middle;

}

p {
font-family: 'Roboto', sans-serif; 
}


h1 {
  padding-left: 1em;
}





/*--------------navbar and footer------------*/  

#navbarNav {
  font-size: large;
  float: right;

  
}

#navbarNav li {
  float: right;
}

#socials {
  text-align: center;
}
#socials a {
  text-decoration: none;
}
#socials i {
  font-size: 40px;
  color: #C7A0FF;
}


/*---------------SLIDE SHOW CODE WRITTEN BY GRADAR ON CODEPEN.IO-------------*/

#slideshow {
  text-align: center;
  overflow: hidden;
  height: 630px;
  width: 728px;
  margin: 0 auto;
}

.slide-wrapper {
  width: 2912px;
  height: 900px;
  animation: slide 18s ease infinite;
}

.slide {
  float: left;
  height: 750px;
  width: 728px;
}

.slide:nth-child(1) {
  background: none;
}

.slide:nth-child(2) {
  background: none;
}

.slide:nth-child(3) {
  background: none;
}

.slide:nth-child(4) {
  background: none;
}

.slide-number {
  color: #000;
  text-align: center;
  font-size: 10em;
}

@keyframes slide {
  20% {margin-left: 0px;}
  30% {margin-left: -728px;}
  50% {margin-left: -728px;}
  60% {margin-left: -1456px;}
  70% {margin-left: -1456px;}
  80% {margin-left: -2184px;}
  90% {margin-left: -2184px;}
}


/*---------------SLIDE SHOW CODE WRITTEN BY GRADAR ON CODEPEN.IO-------------*/

@media screen and (max-width: 991px) {



  .bg-dark {
      --bs-bg-opacity: 0;
  }

  .nav-link,
  .navbar-toggler {
      background-color: #212529;
      width: 70px;
      float:right;
  }

  .nav-link{
    font-size: smaller;
    text-align: center;
  }
  .navbar-toggler {
      margin: 0;
      border-radius: 0;
      float: right;
  }

  .navbar-brand {
      background-color: #212529;
      width: 100%;
      margin: 0;

      
  }
  
  h1 {
      padding-right: 1em;
  }

  #nav {
    padding: 0;
    justify-content: end;
}




}

